// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMarginDesktop-2___1XXWE TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-input"
    >
      <span
        class="TDS_Box-modules__betweenRightMarginDesktop-2___2mNnI TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___2XcY8 TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__boldFont___30Cjc TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__color___22Swj"
        >
          The input
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="default height hideNumberSpinner"
      id="the-input"
      type="text"
      value=""
    />
    <div
      class="iconsPosition"
    />
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMarginDesktop-2___1XXWE TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-input"
    >
      <span
        class="TDS_Box-modules__betweenRightMarginDesktop-2___2mNnI TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___2XcY8 TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__boldFont___30Cjc TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__color___22Swj"
        >
          The input
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative"
  >
    <input
      aria-invalid="true"
      class="error height hideNumberSpinner"
      id="the-input"
      style="padding-right:calc(16px + 2rem)"
      type="text"
      value=""
    />
    <div
      class="iconsPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="TDS_Icon-modules__iconExclamationPointCircle___1HgRN TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
